# driver-service

./: .codecov.yml  .envrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Taskfile.yaml  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  buf.gen.yaml  buf.work.yaml  buf.yaml  buf_deps.bzl  cloudbuild.yaml  docker-compose.yaml  extensions.bazel  go.mod  go.sum  go.work.sum  go_deps.bzl  main.go  repositories.bazel  sweep.yaml
.github/: labeler.yaml  labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: sweep-bugfix.yml  sweep-feature.yml  sweep-refactor.yml
.github/workflows/: auto-merge.yaml  buf-push.yaml  cd.yaml  ci.yaml  main.yml  merge.yaml  nightly.yaml  pr.yaml  push.yaml  read-all.yml  test.yml  workflow1.yml  workflow2.yml  workflow3.yaml  workflow3.yml
.trunk/: trunk.yaml
.trunk/setup-ci/: action.yaml
api/: .gitignore  BUILD.bazel  buf.yaml  create_driver.go  create_driver_test.go  delete_driver.go  delete_driver_test.go  get_driver.go  get_driver_test.go  get_location.go  get_status.go  get_vehicle.go  get_vehicle_test.go  go_offline.go  go_online.go  service.go  test_helpers_test.go  update_driver.go  update_driver_test.go  update_location.go  update_vehicle.go  update_vehicle_test.go
api/interceptors/: auth_interceptor.go  panic_interceptor.go
api/proto/: buf.yaml
api/proto/ride/driver/v1alpha1/: driver_service.proto
api/ride/driver/v1alpha1/: BUILD.bazel  driver_service.pb.go  driver_service.proto
api/ride/driver/v1alpha1/v1alpha1connect/: BUILD.bazel  driver_service.connect.go
api/service/: create_driver.go  create_driver_test.go  delete_driver.go  delete_driver_test.go  get_driver.go  get_driver_test.go  get_location.go  get_location_test.go  get_status.go  get_status_test.go  get_vehicle.go  get_vehicle_test.go  go_offline.go  go_offline_test.go  go_online.go  go_online_test.go  test_helpers_test.go  update_driver.go  update_driver_test.go  update_location.go  update_location_test.go  update_vehicle.go  update_vehicle_test.go
cmd/api-server/: BUILD.bazel  container_structure_test.yaml  main.go  test.yaml  wire.go  wire_gen.go
cmd/service/: BUILD.bzl  main.go  wire.go  wire_gen.go
config/: BUILD.bazel  config.go
config/di/: wire.go  wire_gen.go
di/: wire.go  wire_gen.go
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  pnpm-lock.yaml
interceptors/: auth_interceptor.go
internal/api-handlers/: BUILD.bazel  create_driver.go  create_driver_test.go  delete_driver.go  delete_driver_test.go  get_driver.go  get_driver_test.go  get_location.go  get_status.go  get_vehicle.go  get_vehicle_test.go  go_offline.go  go_online.go  service.go  service_suite_test.go  test_helpers_test.go  update_driver.go  update_driver_test.go  update_location.go  update_vehicle.go  update_vehicle_test.go
internal/api-handlers/interceptors/: BUILD.bazel  auth_interceptor.go  panic_interceptor.go
internal/repositories/driver/: BUILD.bazel  driver_repository.go
internal/repositories/driver/mock/: BUILD.bazel  driver_repository.go
internal/repositories/vehicle/: BUILD.bazel  vehicle_repository.go
internal/repositories/vehicle/mock/: BUILD.bazel  vehicle_repository.go
internal/repositories/wallet/: BUILD.bazel  wallet_repository.go
internal/repositories/wallet/mock/: BUILD.bazel  wallet_repository.go
internal/utils/logger/: BUILD.bazel  logger.go
logger/: logger.go
mocks/: driver_repository.go  logger.go  vehicle_repository.go  wallet_repository.go
pkg/api/: BUILD.bazel  BUILD.bzl  create_driver.go  create_driver_test.go  delete_driver.go  delete_driver_test.go  get_driver.go  get_driver_test.go  get_location.go  get_status.go  get_vehicle.go  get_vehicle_test.go  go_offline.go  go_online.go  service.go  test_helpers_test.go  update_driver.go  update_driver_test.go  update_location.go  update_vehicle.go  update_vehicle_test.go
pkg/api/interceptors/: BUILD.bazel  BUILD.bzl  auth_interceptor.go  panic_interceptor.go
pkg/config/: BUILD.bazel
pkg/protos/: buf.yaml
pkg/protos/ride/driver/v1alpha1/: BUILD.bazel  driver_service.proto
pkg/protos/ride/driver/v1alpha1/driverv1alpha1connect/: BUILD.bazel
pkg/protos/ride/driver/v1alpha1/v1alpha1connect/: BUILD.bazel
pkg/repositories/driver/: BUILD.bazel  driver_repository.go
pkg/repositories/vehicle/: BUILD.bazel  vehicle_repository.go
pkg/repositories/wallet/: BUILD.bazel  wallet_repository.go
pkg/testing/mocks/: BUILD.bazel  driver_repository.go  logger.go  vehicle_repository.go  wallet_repository.go
pkg/utils/logger/: BUILD.bazel  logger.go
proto/: .gitignore
proto/ride/driver/v1alpha1/: driver_service.pb.go  driver_service.pb.validate.go
proto/ride/driver/v1alpha1/driverv1alpha1connect/: driver_service.connect.go
repositories/driver/: driver_repository.go
repositories/vehicle/: vehicle_repository.go
repositories/wallet/: wallet_repository.go
service/: create_driver.go  create_driver_test.go  delete_driver.go  delete_driver_test.go  get_driver.go  get_driver_test.go  get_location.go  get_location_test.go  get_status.go  get_status_test.go  get_vehicle.go  get_vehicle_test.go  go_offline.go  go_offline_test.go  go_online.go  go_online_test.go  service.go  test_helpers_test.go  update_driver.go  update_driver_test.go  update_location.go  update_location_test.go  update_vehicle.go  update_vehicle_test.go  watch_status.go
testing/mocks/: BUILD.bazel  driver_repository.go  logger.go  vehicle_repository.go  wallet_repository.go
utils/logger/: logger.go
