bazel_dep(name = "rules_oci", version = "1.5.0")
# TODO: remove this later. See https://github.com/bazel-contrib/rules_oci/issues/425#issuecomment-1860211483
bazel_dep(name = "aspect_bazel_lib", version = "2.0.3")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless",
    digest = "sha256:6706c73aae2afaa8201d63cc3dda48753c09bcd6c300762251065c0f7e602b25",
    image = "gcr.io/distroless/static",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "distroless")