load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

### Buf.build
def rules_buf()
  http_file(
      name = "rules_buf",
      sha256 = "523a4e06f0746661e092d083757263a249fedca535bd6dd819a8c50de074731a",
      strip_prefix = "rules_buf-0.1.1",
      urls = [
          "https://github.com/bufbuild/rules_buf/archive/refs/tags/v0.1.1.zip",
      ],
  )