load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api-server_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/ride-app/driver-service/cmd/api-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api",
        "//pkg/api/interceptors",
        "//pkg/config",
        "//pkg/protos/ride/driver/v1alpha1/v1alpha1connect",
        "//pkg/repositories/driver",
        "//pkg/repositories/vehicle",
        "//pkg/repositories/wallet",
        "//pkg/third-party",
        "//pkg/utils/logger",
        "@com_connectrpc_connect//:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
        "@org_golang_x_net//http2/h2c:go_default_library",
    ],
)

go_binary(
    name = "api-server",
    embed = [":api-server_lib"],
    visibility = ["//visibility:public"],
)
