load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "api-server_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/ride-app/driver-service/cmd/api-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api",
        "//pkg/api/interceptors",
        "//pkg/config",
        "//pkg/protos/ride/driver/v1alpha1/v1alpha1connect",
        "//pkg/repositories/driver",
        "//pkg/repositories/vehicle",
        "//pkg/repositories/wallet",
        "//pkg/third-party",
        "//pkg/utils/logger",
        "@com_connectrpc_connect//:connect",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "app",
    embed = [":api-server_lib"],
)

pkg_tar(
    name = "tar_layer",
    srcs = [":app"],
)

oci_image(
    name = "image",
    base = "@distroless",
    entrypoint = ["/app"],
    tars = [":tar_layer"],
)

oci_tarball(
    name = "container",
    image = ":image",
    repo_tags = ["api-server:latest"],
)
