load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api-server_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/ride-app/driver-service/cmd/api-server",
    visibility = ["//visibility:private"],
    deps = [
        "//api/ride/driver/v1alpha1/v1alpha1connect",
        "//config",
        "//internal/api-handlers",
        "//internal/api-handlers/interceptors",
        "//internal/utils/logger",
        "//pkg/repositories/driver",
        "//pkg/repositories/vehicle",
        "//pkg/repositories/wallet",
        "//third-party",
        "@com_connectrpc_connect//:connect",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "api-server",
    embed = [":api-server_lib"],
    visibility = ["//visibility:public"],
)
