load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api-handlers",
    srcs = [
        "create_driver.go",
        "delete_driver.go",
        "get_driver.go",
        "get_location.go",
        "get_status.go",
        "get_vehicle.go",
        "go_offline.go",
        "go_online.go",
        "service.go",
        "update_driver.go",
        "update_location.go",
        "update_vehicle.go",
    ],
    importpath = "github.com/ride-app/driver-service/internal/api-handlers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/driver/v1alpha1",
        "//internal/repositories/driver",
        "//internal/repositories/vehicle",
        "//internal/repositories/wallet",
        "@com_connectrpc_connect//:connect",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_dragonfish_go//pkg/logger",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "api-handlers_test",
    srcs = [
        "delete_driver_test.go",
        "get_vehicle_test.go",
        "service_suite_test.go",
        "test_helpers_test.go",
        "update_driver_test.go",
        "update_vehicle_test.go",
    ],
    deps = [
        ":api-handlers",
        "//api/ride/driver/v1alpha1",
        "//internal/repositories/driver/mock",
        "//internal/repositories/vehicle/mock",
        "//internal/repositories/wallet/mock",
        "@com_connectrpc_connect//:connect",
        "@com_github_dragonfish_go//pkg/logger/mock",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@org_golang_google_genproto//googleapis/type/date",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_mock//gomock",
    ],
)
