load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "driver",
    srcs = ["driver_repository.go"],
    importpath = "github.com/ride-app/driver-service/internal/repositories/driver",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/driver/v1alpha1",
        "//internal/utils/logger",
        "@com_github_mmcloughlin_geohash//:geohash",
        "@com_google_cloud_go_firestore//:firestore",
        "@com_google_firebase_go_v4//:go",
        "@com_google_firebase_go_v4//auth",
        "@org_golang_google_genproto//googleapis/type/date",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
