load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "github.com/ride-app/driver-service/internal/utils/logger",
    visibility = ["//:__subpackages__"],
    deps = [
        "//config",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
