load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "interceptors",
    srcs = [
        "auth_interceptor.go",
        "panic_interceptor.go",
    ],
    importpath = "github.com/ride-app/driver-service/pkg/api/interceptors",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils/logger",
        "@com_connectrpc_connect//:go_default_library",
        "@com_github_golang_jwt_jwt_v5//:go_default_library",
        "@com_github_micahparks_keyfunc_v2//:go_default_library",
    ],
)
