load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "vehicle",
    srcs = ["vehicle_repository.go"],
    importpath = "github.com/ride-app/driver-service/pkg/repositories/vehicle",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/protos/ride/driver/v1alpha1",
        "//pkg/utils/logger",
        "@com_connectrpc_connect//:go_default_library",
        "@com_google_cloud_go_firestore//:go_default_library",
        "@com_google_firebase_go_v4//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
