load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "driver_repository.go",
        "logger.go",
        "vehicle_repository.go",
        "wallet_repository.go",
    ],
    importpath = "github.com/ride-app/driver-service/pkg/testing/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//api/ride/driver/v1alpha1",
        "//internal/utils/logger",
        "@build_buf_gen_go_ride_wallet_protocolbuffers_go//ride/wallet/v1alpha1",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_mock//gomock",
    ],
)
