load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["vehicle_repository.go"],
    importpath = "github.com/ride-app/driver-service/internal/repositories/vehicle/mock",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/driver/v1alpha1",
        "@com_github_dragonfish_go//pkg/logger",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_mock//gomock",
    ],
)
