load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "driver_service.pb.go",
        "driver_service.pb.validate.go",
    ],
    importpath = "github.com/ride-app/driver-service/pkg/protos/ride/driver/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate",
        "@org_golang_google_genproto//googleapis/api/annotations",
        "@org_golang_google_genproto//googleapis/type/date",
        "@org_golang_google_genproto//googleapis/type/phone_number",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
